--- a/env.example
+++ b/env.example
@@ -1,17 +1,15 @@
-# Environment variables declared in this file are NOT automatically loaded by Prisma.
-# Please add `import "dotenv/config";` to your `prisma.config.ts` file, or use the Prisma CLI with Bun
-# to load environment variables from .env files: https://pris.ly/prisma-config-env-vars.
+# MongoDB Configuration
+MONGO_USER=esp32_user
+MONGO_PASSWORD=esp32_password
+MONGO_DB=esp32_db
+MONGO_PORT=27017
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# MongoDB Connection String (optional - will be auto-generated from above variables in Docker)
+# For local development: mongodb://localhost:27017/esp32_db
+# For Docker: mongodb://esp32_user:esp32_password@mongodb:27017/esp32_db?authSource=admin
+MONGODB_URI=
+DATABASE_URL=
 
-# The following `prisma+postgres` URL is similar to the URL produced by running a local Prisma Postgres
-# server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the
-# one found in a remote Prisma Postgres URL, does not contain any sensitive information.
-
+# Telegram (Optional - for notifications)
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=
