--- a/env.example
+++ b/env.example
@@ -1,15 +1,6 @@
-# MongoDB Configuration
-MONGO_USER=esp32_user
-MONGO_PASSWORD=esp32_password
-MONGO_DB=esp32_db
-MONGO_PORT=27017
-
-# MongoDB Connection String (optional - will be auto-generated from above variables in Docker)
-# For local development: mongodb://localhost:27017/esp32_db
-# For Docker: mongodb://esp32_user:esp32_password@mongodb:27017/esp32_db?authSource=admin
-MONGODB_URI=
 DATABASE_URL=
-
-# Telegram (Optional - for notifications)
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
+MONGO_USER=
+MONGO_PASSWORD=
+MONGO_DB=
