--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,7 @@ services:
       # MongoDB connection string
       - MONGODB_URI=mongodb://${MONGO_USER:-esp32_user}:${MONGO_PASSWORD:-esp32_password}@mongodb:${MONGO_PORT:-27017}/${MONGO_DB:-esp32_db}?authSource=admin
       - DATABASE_URL=mongodb://${MONGO_USER:-esp32_user}:${MONGO_PASSWORD:-esp32_password}@mongodb:${MONGO_PORT:-27017}/${MONGO_DB:-esp32_db}?authSource=admin
-      - NODE_ENV=development
-      - WATCHPACK_POLLING=true
+      - NODE_ENV=production
     depends_on:
       mongodb:
         condition: service_healthy
