--- a/env.example
+++ b/env.example
@@ -1,6 +1,8 @@
-DATABASE_URL=
 TELEGRAM_BOT_TOKEN=
-TELEGRAM_CHAT_ID=
-MONGO_USER=
-MONGO_PASSWORD=
-MONGO_DB=
+TELEGRAM_CHAT_ID="
+MONGODB_URI=
+AUTH_USERNAME=
+AUTH_PASSWORD=
+NEXTAUTH_SECRET=
+# for local dev
+NEXTAUTH_URL=http://localhost:3000
